[gd_scene load_steps=6 format=2]

[ext_resource path="res://Itim/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -37.0
margin_top = -20.0
margin_right = 1103.0
margin_bottom = 1938.0

[node name="GameOverText" type="Label" parent="."]
margin_left = 107.355
margin_top = 48.4827
margin_right = 970.355
margin_bottom = 232.483
custom_fonts/font = SubResource( 1 )
text = "game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameModeText" type="Label" parent="."]
margin_left = 65.7982
margin_top = 214.709
margin_right = 991.798
margin_bottom = 398.709
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
text = "-gamemode-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hi_scoreText" type="Label" parent="."]
margin_left = 36.3623
margin_top = 869.225
margin_right = 962.362
margin_bottom = 1053.23
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
text = "HI-SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hi_scoreNumber" type="Label" parent="."]
margin_left = 608.661
margin_top = 868.125
margin_right = 1534.66
margin_bottom = 1052.12
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.960784, 0.0235294, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreText" type="Label" parent="."]
margin_left = 31.1677
margin_top = 1014.67
margin_right = 957.168
margin_bottom = 1198.67
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreNumber" type="Label" parent="."]
margin_left = 463.025
margin_top = 1014.44
margin_right = 1389.02
margin_bottom = 1198.44
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.952941, 0.937255, 0.0156863, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatText" type="Label" parent="."]
margin_left = 22.5101
margin_top = 1154.93
margin_right = 948.51
margin_bottom = 1338.93
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
text = "dodging: +"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatNumber" type="Label" parent="."]
margin_left = 649.537
margin_top = 1151.76
margin_right = 1575.54
margin_bottom = 1335.76
rect_scale = Vector2( 0.732121, 0.689839 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( -502.199, -724.401 )
scale = Vector2( 1.79187, 1.49937 )

[node name="RetryButton" type="Button" parent="."]
margin_left = -0.389038
margin_top = 1643.54
margin_right = 522.611
margin_bottom = 1884.54
custom_fonts/font = SubResource( 2 )
text = "retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 562.356
margin_top = 1641.81
margin_right = 1085.36
margin_bottom = 1882.81
custom_fonts/font = SubResource( 2 )
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
